--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,8 @@
     <dependency>
     	<groupId>junit</groupId>
     	<artifactId>junit</artifactId>
+    	<version>4.7</version>
+    	<scope>test</scope>
     </dependency>
   </dependencies>
 </project>
