--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.easytesting</groupId>
   <artifactId>fest-util</artifactId>
-  <version>1.2.3-MODULARIZATION-SNAPSHOT</version>
+  <version>1.2.3-SNAPSHOT</version>
   <name>FEST Util</name>
   <description>Utility methods used by FEST modules</description>
   <inceptionYear>2007</inceptionYear>
@@ -12,7 +12,7 @@
   <parent>
     <groupId>org.easytesting</groupId>
     <artifactId>fest</artifactId>
-    <version>1.0.15-MODULARIZATION-SNAPSHOT</version>
+    <version>1.0.14</version>
   </parent>
   <mailingLists>
     <mailingList>
@@ -27,10 +27,6 @@
     <connection>scm:git:git://github.com/alexruiz/fest-util.git</connection>
     <url>https://github.com/alexruiz/fest-util</url>
   </scm>
-  <issueManagement>
-    <system>JIRA</system>
-    <url>http://jira.codehaus.org/browse/FEST</url>
-  </issueManagement>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -39,6 +35,7 @@
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-all</artifactId>
+      <version>1.9.0</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
