--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd ">
-
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd ">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.easytesting</groupId>
   <artifactId>fest-util</artifactId>
   <version>1.2.3-SNAPSHOT</version>
   <name>FEST Util</name>
@@ -12,7 +11,7 @@
   <parent>
     <groupId>org.easytesting</groupId>
     <artifactId>fest</artifactId>
-    <version>1.0.14</version>
+    <version>1.0.15-SNAPSHOT</version>
   </parent>
   <mailingLists>
     <mailingList>
@@ -39,4 +38,8 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <issueManagement>
+    <system>github</system>
+    <url>https://github.com/alexruiz/fest-util/issues</url>
+  </issueManagement>
 </project>
