--- a/pom.xml
+++ b/pom.xml
@@ -41,4 +41,40 @@
     <system>github</system>
     <url>https://github.com/alexruiz/fest-util/issues</url>
   </issueManagement>
+  <build>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>maven-bundle-plugin</artifactId>
+            <version>2.3.7</version>
+            <extensions>true</extensions>
+            <configuration>
+                <instructions>
+                    <Import-Package>!*</Import-Package>
+                    <Require-Bundle>org.junit;bundle-version="4.10.0"
+                    </Require-Bundle>
+                    <Export-Package>!.,org.fest.util</Export-Package>
+                    <Bundle-RequiredExecutionEnvironment>JavaSE-1.6</Bundle-RequiredExecutionEnvironment>
+                </instructions>
+            </configuration>
+            <executions>
+                <execution>
+                    <id>bundle-manifest</id>
+                    <phase>process-classes</phase>
+                    <goals>
+                        <goal>manifest</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
+        <plugin>
+            <artifactId>maven-jar-plugin</artifactId>
+            <configuration>
+                <archive>
+                    <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
+                </archive>
+            </configuration>
+        </plugin>
+    </plugins>
+  </build>
 </project>
