--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,11 @@
       <version>1.9.0</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.google.code.findbugs</groupId>
+      <artifactId>jsr305</artifactId>
+      <version>1.3.9</version>
+    </dependency>  
   </dependencies>
   <issueManagement>
     <system>github</system>
