Replaced dependency on jsr-305.jar with JetBrains annotations.

--- a/pom.xml
+++ b/pom.xml
@@ -28,8 +28,9 @@
     </scm>
     <dependencies>
         <dependency>
-            <groupId>com.google.code.findbugs</groupId>
-            <artifactId>jsr305</artifactId>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>13.0</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
